<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.PermissionActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:fontFamily="@font/acme"
                android:textSize="28sp"
                android:padding="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginBottom="20dp"
                android:paddingHorizontal="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/chat"
                            app:tint="@color/white" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Messages Permission"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message"
                        android:textColor="@color/black"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="35dp"
                android:layout_marginVertical="15dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/globe_solid"
                            app:tint="@color/white" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Internet Permission"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/internet"
                        android:textColor="@color/black"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="35dp"
                android:layout_marginVertical="15dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/bell_solid"
                            app:tint="@color/white" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Notification Permission"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="This permission is used to detect any incoming messages"
                        android:textColor="@color/black"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Grant Permission"
                android:id="@+id/grant"
                android:backgroundTint="@color/blue"
                android:layout_marginHorizontal="20dp"
                app:cornerRadius="12dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:backgroundTint="@color/white"
        android:textColor="@color/blue"
        android:text="@string/privacy_policy"
        app:cornerRadius="12dp" />

</LinearLayout>